bpo-43271: Re-enable ceval.c optimizations for Windows debug builds

Partially reverts commit b74396c3167cc780f01309148db02709bc37b432

The optimizations are necessary to prevent the interpreter from
crashing in a number of tests involving recursion.